--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,22 +1,39 @@
 .hero {
-
 	padding: 118px 0;
 
-	// background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-	// 	url(../images/hero/desktop/hero.jpg);
-	background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+	background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+		url(../../images/hero/mob/hero-m.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 480px;
 
+	@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+		background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+			url(../../images/hero/mob/hero-m@2x.jpg);
+	}
+
 	@media screen and (min-width: 768px) {
+		background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+			url(../../images/hero/tablet/hero-t.jpg);
 		background-size: 768px;
+
+		@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+			background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+				url(../../images/hero/tablet/hero-t@2x.jpg);
+		}
 	}
 
 	@media screen and (min-width: 1200px) {
 		padding: 200px 0;
 
+		background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+			url(../../images/hero/desktop/hero-d.jpg);
 		background-size: 1600px;
+
+		@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+			background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+				url(../../images/hero/desktop/hero-d@2x.jpg);
+		}
 	}
 }
 
@@ -48,7 +65,6 @@
 		font-size: 44px;
 		line-height: 1.364;
 	}
-
 }
 
 .hero__btn {
